--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,7 +77,7 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-  - family: Schyler
+  - family: Cera-Pro
     fonts:
           - asset: assets/fonts/Cera-Pro-Bold.otf
           - asset: assets/fonts/Cera-Pro-Medium.otf
